<resources>
    <string name="app_name">TAP TAP TAP</string>
    <string name="Welcome_text_view">!!Bienvenido a TAP TAP TAP¡¡</string>
    <string name="Email_text">Correo electronico</string>
    <string name="Password_text">Contraseña</string>
    <string name="Rep_password_text">Repita la contraseña</string>
    <string name="Register_button">Registrar</string>
    <string name="name_player">Nombre del jugador</string>
    <string name="todo">TODO</string>
    <string name="sing_in">Iniciar sesión</string>
    <string name="info"><u><b>Bienvenido %s</b></u></string>
    <string name="register"><u><b>!!Registrate¡¡</b></u></string>
    <string name="sing_out">Cerrar sesión</string>
    <string name="quick_game_text_button">Partida rapida</string>
    <string name="group_game_text_button">Partida de grupo</string>
    <string name="local_game_text_button">Partida local</string>
    <string name="button">Button</string>
    <string name="create_room_text_button">Crear sala</string>
    <string name="enter_the_room_text_button">Entrar a una sala</string>
    <string name="code_sala_text">Código de la sala</string>
    <string name="instruction_player_two">Ingrese el nombre del segundo jugador</string>
    <string name="player_two_name">Jugador 2</string>
    <string name="accept_button">Aceptar</string>
    <string name="title_play">Jugar</string>
    <string name="title_score">Historial</string>
    <string name="title_profile">Perfil</string>
    <string name="text_view_score">Puntuación: </string>
    <string name="button_online_game">Golpea a: </string>
    <string name="title_records">Records</string>
    <string name="button_play_game">Jugar</string>
    <string name="text_player1">Player1</string>
    <string name="text_view_player2">Player2</string>
    <string name="text_view_player1">Player1</string>
    <string name="text_view_code">123456</string>
    <string name="text_view_info_record">En este fragmento se mostraran los records cuando ya se tenga un historial de records</string>
    <string name="text_view_info_scores">En este fragmento se mostraran los puntajes una vez se tenga historial de partidas</string>
    <string name="text_view_name">Nombre:</string>
    <string name="text_view_email">Email:</string>
    <string name="recoveryPassword"><u><b>Olvide mi contraseña</b></u></string>
    <string name="female_radio_button">Femenino</string>
    <string name="male_radio_button">Masculino</string>
    <string name="game_id">Id Partida:</string>
    <string name="name_player_one">NombreJugador1:</string>
    <string name="name_player_two">NombreJugador2:</string>
    <string name="winner">Ganador:</string>
    <string name="score">Puntaje:</string>
</resources>