<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.startingselection.StartingSelectionFragment" >

    <Button
        android:id="@+id/quick_game_button"
        android:layout_width="193dp"
        android:layout_height="110dp"
        android:layout_marginTop="108dp"
        android:text="@string/quick_game_text_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/group_game_button"
        android:layout_width="193dp"
        android:layout_height="110dp"
        android:layout_marginTop="90dp"
        android:text="@string/group_game_text_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quick_game_button"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/local_game_button"
        android:layout_width="193dp"
        android:layout_height="110dp"
        android:layout_marginTop="90dp"
        android:text="@string/local_game_text_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/group_game_button"
        tools:ignore="TextContrastCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>