<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageView
            android:id="@+id/image_game"
            android:layout_width="100dp"
            android:layout_height="150dp"
            android:contentDescription="@null"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/iconoapksinfondo" />

        <TextView
            android:id="@+id/game_id_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="@string/game_id"
            app:layout_constraintStart_toEndOf="@+id/image_game"
            app:layout_constraintBottom_toTopOf="@+id/name_player_one_text_view"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/name_player_one_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="4dp"
            android:text="@string/name_player_one"
            app:layout_constraintBottom_toTopOf="@+id/score_player_one_text_view"
            app:layout_constraintStart_toEndOf="@+id/image_game"
            app:layout_constraintTop_toBottomOf="@+id/game_id_text_view"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/score_player_one_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="@string/score"
            app:layout_constraintBottom_toTopOf="@+id/name_player_two_text_view"
            app:layout_constraintStart_toEndOf="@+id/image_game"
            app:layout_constraintTop_toBottomOf="@+id/name_player_one_text_view" />

        <TextView
            android:id="@+id/name_player_two_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="@string/name_player_two"
            app:layout_constraintBottom_toTopOf="@+id/score_player_two_text_view"
            app:layout_constraintStart_toEndOf="@+id/image_game"
            app:layout_constraintTop_toBottomOf="@+id/score_player_one_text_view"
            tools:layout_editor_absoluteY="66dp" />

        <TextView
            android:id="@+id/score_player_two_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="@string/score"
            app:layout_constraintBottom_toTopOf="@+id/winner_text_view"
            app:layout_constraintStart_toEndOf="@+id/image_game"
            app:layout_constraintTop_toBottomOf="@+id/name_player_two_text_view" />

        <TextView
            android:id="@+id/winner_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="@string/winner"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/image_game"
            app:layout_constraintTop_toBottomOf="@+id/score_player_two_text_view" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>