<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.startinggroup.StartingGroupFragment">
<Button
        android:id="@+id/create_room_button"
        android:layout_width="211dp"
        android:layout_height="105dp"
        android:text="@string/create_room_text_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/group_message"
        tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck" />

    <Button
        android:id="@+id/enter_the_room_button"
        android:layout_width="211dp"
        android:layout_height="105dp"
        android:text="@string/enter_the_room_text_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.435"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/room_messaje"
        tools:ignore="TextContrastCheck" />

    <ImageView
        android:id="@+id/group_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:src="@drawable/gruop_message"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ImageContrastCheck"
        android:contentDescription="@string/todo" />

    <ImageView
        android:id="@+id/room_messaje"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:src="@drawable/room_message"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_room_button"
        tools:ignore="ImageContrastCheck"
        android:contentDescription="@string/todo" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/code_room_text_input_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="128dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/room_messaje">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/code_room_edit_text"
            style="@style/TextViewSubTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/code_sala_text"
            android:inputType="number"
            tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />
    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>